{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 229,
  "lineage": "80628d55-86c8-ce76-be5c-3876a1dab2d1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "tffwpolicy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/azureFirewalls/tf-fw"
            ],
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/firewallPolicies/tffwpolicy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "eastus",
            "name": "tffwpolicy",
            "private_ip_ranges": [],
            "resource_group_name": "app-grp",
            "rule_collection_groups": [
              "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/firewallPolicies/tffwpolicy/ruleCollectionGroups/tffwpolrcg"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "tffwpolrcg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/firewallPolicies/tffwpolicy",
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/firewallPolicies/tffwpolicy/ruleCollectionGroups/tffwpolrcg",
            "name": "tffwpolrcg",
            "nat_rule_collection": [
              {
                "action": "Dnat",
                "name": "nat_rule_collection1",
                "priority": 100,
                "rule": [
                  {
                    "destination_address": "20.120.93.172",
                    "destination_ports": [
                      "50"
                    ],
                    "name": "tfrdpnat",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "10.0.1.4",
                    "translated_fqdn": "",
                    "translated_port": 3389
                  }
                ]
              }
            ],
            "network_rule_collection": [],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.tffwpolicy",
            "azurerm_network_security_group.tfnsg",
            "azurerm_public_ip.tf-fw-pip",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfvm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/tf-vmnic",
            "internal_domain_name_suffix": "ked5ecnpci5udhx3xtyxxyyiaf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "tfconfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/tfsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-DB-B5-CB",
            "name": "tf-vmnic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "app-grp",
            "virtual_machine_id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Compute/virtualMachines/tf-vm01"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsg",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.tfsubnet",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "testnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/testnsg",
            "location": "eastus",
            "name": "testnsg",
            "resource_group_name": "app-grp",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/tfnsg",
            "location": "eastus",
            "name": "tfnsg",
            "resource_group_name": "app-grp",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-fw-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/tf-fw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.120.93.172",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "tf-fw-pip",
            "resource_group_name": "app-grp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsg",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "tf-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/routeTables/tf-rt",
            "location": "eastus",
            "name": "tf-rt",
            "resource_group_name": "app-grp",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Internet",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.0.0.0/8",
                "name": "RFC-1918-10",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.16.0.0/12",
                "name": "RFC-1918-172",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.0.0/16",
                "name": "RFC-1918-192",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/tfsubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "tfvnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsg",
            "azurerm_resource_group.appgrp",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/default",
            "name": "default",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "testrg",
            "virtual_network_name": "testvnet"
          },
          "dependencies": [
            "azurerm_resource_group.testrg",
            "azurerm_virtual_network.testvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/tfsubnet",
            "name": "tfsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "tfvnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsg",
            "azurerm_resource_group.appgrp",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tfsubnetnsgasocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/tfsubnet",
            "network_security_group_id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/tfnsg",
            "subnet_id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/tfsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsg",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.tfsubnet",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "tf-rt-tfsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/tfsubnet",
            "route_table_id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/routeTables/tf-rt",
            "subnet_id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/tfsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsg",
            "azurerm_resource_group.appgrp",
            "azurerm_route_table.tf-rt",
            "azurerm_subnet.tfsubnet",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "testvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/12"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cef04afd-b918-46ba-a4d9-7ca5acc42050",
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet",
            "location": "westus",
            "name": "testvnet",
            "resource_group_name": "testrg",
            "subnet": [
              {
                "address_prefix": "172.16.1.0/24",
                "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/default",
                "name": "default"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.testrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/8"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "09f20751-12af-413f-9efd-bcf17be30805",
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet",
            "location": "eastus",
            "name": "tfvnet",
            "resource_group_name": "app-grp",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/tfsubnet",
                "name": "tfsubnet",
                "security_group": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/tfnsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peeringconnection1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet/virtualNetworkPeerings/easttowest",
            "name": "easttowest",
            "remote_virtual_network_id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet",
            "resource_group_name": "app-grp",
            "use_remote_gateways": false,
            "virtual_network_name": "tfvnet"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_resource_group.testrg",
            "azurerm_virtual_network.testvnet",
            "azurerm_virtual_network.tfvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peeringconnection2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/testrg/providers/Microsoft.Network/virtualNetworks/testvnet/virtualNetworkPeerings/westtoeast",
            "name": "westtoeast",
            "remote_virtual_network_id": "/subscriptions/221c15e1-e587-493b-ad56-ff56ead092b3/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/tfvnet",
            "resource_group_name": "testrg",
            "use_remote_gateways": false,
            "virtual_network_name": "testvnet"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_resource_group.testrg",
            "azurerm_virtual_network.testvnet",
            "azurerm_virtual_network.tfvnet",
            "azurerm_virtual_network_peering.peeringconnection1"
          ]
        }
      ]
    }
  ]
}